# the-knowitall-postdoc

./: .gitignore  README.md  app.py  llm_config.py  main.py  prompts.py  pyproject.toml  readme.md  tools_chroma.py  tools_mcp.py  tools_pubmed.py
data/: pubmed_ai_drug_discovery.json
data/chroma_db/47993d60-9f57-4088-b0f1-58687a49c52e/: index_metadata.pickle
