[project]
name = "the-knowitall-postdoc"
version = "0.1.0"
description = "A conversational AI postdoc that searches the AI/drug-discovery literature."
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "python-dotenv",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "openai",
    "chromadb",
    "biopython",
    "requests",
]
